# gvttc

./: CMakeLists.txt  README.md  usattevent.cpp  usattevent.h
Events/: CMakeLists.txt  event.cpp  event.h  eventbase.h  league.cpp  league.h  match.cpp  match.h  roundrobin.cpp  roundrobin.h  usatttournament.cpp  usatttournament.h
Lib/Galois/: CMakeLists.txt  galois.h
Output/: CMakeLists.txt  pane.h  pdfdoc.cpp  pdfdoc.h  pdfpage.cpp  pdfpage.h
Participants/: CMakeLists.txt  person.h  player.cpp  player.h  team.cpp  team.h
Players/: CMakeLists.txt  person.h  player.cpp  player.h
Test/: CMakeLists.txt  main.cpp
